monticore-generator/src/test/resources/cocos/invalid/A4021/A4021.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4021;

grammar A4021 {


 astrule A;


}
